--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build": "npm run build:clean && npm run build:vue && npm run build:nw",
     "build:clean": "rimraf ./dist-vue ./dist",
     "build:vue": "vue-cli-service build --modern --dest ./dist-vue",
-    "build:nw": "build --concurrent --tasks win-x86 --mirror https://dl.nwjs.io/ .",
-    "build:nw2": "build --concurrent --tasks win-x86,linux-x86,linux-x64,mac-x64 --mirror https://dl.nwjs.io/ .",
+    "build:nw": "build --concurrent --tasks win-x86,linux-x86,linux-x64,mac-x64 --mirror https://dl.nwjs.io/ .",
     "run:win": "dist\\nw-vue-1.0.0-win-x86\\nw-vue.exe",
     "lint": "vue-cli-service lint --no-fix",
     "fix": "vue-cli-service lint --fix",
@@ -67,7 +66,10 @@
       "e2e/**/*",
       "src/**/*",
       "tests/**/*",
-      "public/**/*"
+      "public/**/*",
+      "dist-vue/**/*.js.map",
+      "dist-vue/**/*.css.map",
+      "dist-vue/**/*-legacy*",
       ".browserslistrc",
       ".eslintrc",
       ".gitignore",
