--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "concurrently \"npm run serve\" \"nw .\"",
+    "start": "concurrently \"npm run serve\" \"wait-on http://localhost:8964 && nw .\"",
     "serve": "vue-cli-service serve --port=8964",
     "build": "npm run build:clean && npm run build:vue && npm run build:nw",
     "build:clean": "rimraf ./dist-vue ./dist",
@@ -49,7 +49,8 @@
     "nwjs-types": "^1.0.0",
     "rimraf": "^3.0.0",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "wait-on": "^3.3.0"
   },
   "chromium-args": "--load-extension='./node_modules/nw-vue-devtools/extension'",
   "build": {
