--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "run:win": "dist\\nw-vue-1.0.0-win-x86\\nw-vue.exe",
     "lint": "vue-cli-service lint --no-fix",
     "fix": "vue-cli-service lint --fix",
+    "test": "npm run test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "jest --config jest.config.js --coverage --runInBand"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -38,17 +39,26 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-vue-app": "^2.0.0",
     "concurrently": "^4.1.2",
     "core-js": "^2.6.5",
-    "eslint": "^6.3.0",
-    "eslint-plugin-jest": "^22.16.0",
+    "eslint": "^6.4.0",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.9.0",
+    "jest-environment-jsdom-global": "^1.2.0",
+    "jest-transform-stub": "^2.0.0",
     "nw": "0.40.2-sdk",
     "nw-vue-devtools": "^1.3.0",
     "nwjs-builder-phoenix": "^1.15.0",
     "nwjs-types": "^1.0.0",
     "rimraf": "^3.0.0",
     "vue": "^2.6.10",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.10",
     "wait-on": "^3.3.0"
   },
