--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:clean": "rimraf ./dist-vue ./dist",
     "build:vue": "vue-cli-service build --modern --dest ./dist-vue",
     "build:nw": "build --concurrent --tasks win-x86,linux-x86,linux-x64,mac-x64 --mirror https://dl.nwjs.io/ .",
+    "build:win": "rimraf ./dist-vue && npm run build:vue && build --tasks win-x86 --mirror https://dl.nwjs.io/ .",
     "run:win": "dist\\nw-vue-1.0.0-win-x86\\nw-vue.exe",
     "lint": "vue-cli-service lint --no-fix",
     "fix": "vue-cli-service lint --fix",
