--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "build:clean": "rimraf ./dist-vue ./dist",
     "build:vue": "vue-cli-service build --modern --dest ./dist-vue",
     "build:nw": "build --concurrent --tasks win-x86,linux-x86,linux-x64,mac-x64 --mirror https://dl.nwjs.io/ .",
-    "build:win": "rimraf ./dist-vue && npm run build:vue && build --tasks win-x86 --mirror https://dl.nwjs.io/ .",
+    "build:win": "npm run build:win:clean && npm run build:vue && build --tasks win-x86 --mirror https://dl.nwjs.io/ .",
+    "build:win:clean": "rimraf ./dist-vue ./dist/nw-vue-1.0.0-win-x86 ./dist/nw-vue-1.0.0-win-x86.zip ./dist/nw-vue-1.0.0-win-x86.7z ./dist/nw-vue-1.0.0-win-x86-Setup.exe",
     "run:win": "dist\\nw-vue-1.0.0-win-x86\\nw-vue.exe",
+    "regression": "rd /s /q node_modules & rd /s /q node_modules & rd /s /q node_modules & npm install && npm run lint && npm test && npm run build:win && npm run run:win",
     "lint": "vue-cli-service lint --no-fix",
     "fix": "vue-cli-service lint --fix",
     "test": "npm run test:unit",
@@ -53,7 +55,7 @@
     "jest": "^24.9.0",
     "jest-environment-jsdom-global": "^1.2.0",
     "jest-transform-stub": "^2.0.0",
-    "nw": "0.40.2-sdk",
+    "nw": "0.41.1-sdk",
     "nw-vue-devtools": "^1.3.0",
     "nwjs-builder-phoenix": "^1.15.0",
     "nwjs-types": "^1.0.0",
@@ -65,7 +67,7 @@
   },
   "chromium-args": "--load-extension='./node_modules/nw-vue-devtools/extension'",
   "build": {
-    "nwVersion": "v0.39.2",
+    "nwVersion": "v0.41.1",
     "nwFlavor": "normal",
     "targets": [
       "zip",
@@ -109,13 +111,13 @@
       "node-main": "server.js"
     },
     "win": {
-      "icon": "public/icon.ico"
+      "icon": "public/icon-256.ico"
     },
     "mac": {
       "icon": "public/icon.icns"
     },
     "nsis": {
-      "icon": "public/icon.ico",
+      "icon": "public/icon-256.ico",
       "unIcon": "public/icon.ico",
       "languages": [
         "English"
