--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "babel-preset-vue-app": "^2.0.0",
     "concurrently": "^4.1.2",
     "core-js": "^2.6.5",
-    "eslint": "^6.4.0",
-    "eslint-plugin-jest": "^22.17.0",
+    "eslint": "^6.6.0",
+    "eslint-config-tjw-base": "^1.0.0",
+    "eslint-config-tjw-vue": "^1.0.0",
+    "eslint-plugin-jest": "^23.0.2",
     "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.9.0",
     "jest-environment-jsdom-global": "^1.2.0",
