--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-unit-jest": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^4.0.5",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.0.5",
+    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
@@ -47,17 +47,18 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-vue-app": "^2.0.0",
-    "concurrently": "^4.1.2",
-    "core-js": "^2.6.5",
+    "concurrently": "^5.0.0",
+    "core-js": "^3.3.5",
     "eslint": "^6.6.0",
     "eslint-config-tjw-base": "^1.0.0",
     "eslint-config-tjw-vue": "^1.0.0",
     "eslint-plugin-jest": "^23.0.2",
     "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.9.0",
+    "jest-environment-jsdom": "^24.9.0",
     "jest-environment-jsdom-global": "^1.2.0",
     "jest-transform-stub": "^2.0.0",
-    "nw": "0.41.1-sdk",
+    "nw": "0.42.0-sdk",
     "nw-vue-devtools": "^1.3.0",
     "nwjs-builder-phoenix": "^1.15.0",
     "nwjs-types": "^1.0.0",
@@ -69,7 +70,7 @@
   },
   "chromium-args": "--load-extension='./node_modules/nw-vue-devtools/extension'",
   "build": {
-    "nwVersion": "v0.41.1",
+    "nwVersion": "v0.42.0",
     "nwFlavor": "normal",
     "targets": [
       "zip",
