--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "fix": "vue-cli-service lint --fix",
     "test": "npm run test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "jest --config jest.config.js --coverage --runInBand"
+    "test:unit": "jest --config jest.config.js --coverage --runInBand",
+    "validate": "npm run lint && npm run test:unit && npm run build:vue"
   },
   "dependencies": {
     "express": "^4.17.1"
