--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "jest --config jest.config.js --coverage --runInBand",
     "validate": "npm run lint && npm run test:unit && npm run build:vue",
-    "update:vue-devtools": "rimraf ./node_modules/nw-vue-devtools && npm install"
+    "update:vue-devtools": "rimraf ./node_modules/nw-vue-devtools-prebuilt && npm install"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -70,7 +70,7 @@
     "jest-environment-jsdom-global": "^1.2.0",
     "jest-transform-stub": "^2.0.0",
     "nw": "0.42.0-sdk",
-    "nw-vue-devtools": "^1.3.0",
+    "nw-vue-devtools-prebuilt": "^0.0.10",
     "nwjs-builder-phoenix": "^1.15.0",
     "nwjs-types": "^1.0.0",
     "rimraf": "^3.0.0",
@@ -79,7 +79,7 @@
     "vue-template-compiler": "^2.6.10",
     "wait-on": "^3.3.0"
   },
-  "chromium-args": "--enable-spell-checking --load-extension='./node_modules/nw-vue-devtools/extension'",
+  "chromium-args": "--enable-spell-checking --load-extension='./node_modules/nw-vue-devtools-prebuilt/extension'",
   "build": {
     "nwVersion": "v0.42.0",
     "nwFlavor": "normal",
