Update dependencies and bump

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "Only add dependencies that you want shipped to the end user, for everything else, use devDependencies, including things that will be bundled by webpack.",
     "NW.js requires a name and a main, everything else is optional.",
     "The build section is used by nwjs-builder-phoenix, see it's documentation for more info",
-    "To turn spell checking off, remove the chromium-args from this file"
+    "To turn spell checking off, remove it from the chromium-args in this file"
   ],
   "name": "nw-vue",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "http://localhost:8964",
   "node-remote": "http://localhost:8964",
   "node-main": "",
@@ -59,17 +59,17 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-vue-app": "^2.0.0",
     "concurrently": "^5.0.0",
-    "core-js": "^3.3.5",
+    "core-js": "^3.4.0",
     "eslint": "^6.6.0",
     "eslint-config-tjw-base": "^1.0.0",
     "eslint-config-tjw-vue": "^1.0.0",
-    "eslint-plugin-jest": "^23.0.2",
-    "eslint-plugin-vue": "^5.2.3",
+    "eslint-plugin-jest": "^23.0.3",
+    "eslint-plugin-vue": "^6.0.0",
     "jest": "^24.9.0",
     "jest-environment-jsdom": "^24.9.0",
     "jest-environment-jsdom-global": "^1.2.0",
     "jest-transform-stub": "^2.0.0",
-    "nw": "0.42.0-sdk",
+    "nw": "0.42.3-sdk",
     "nw-vue-devtools-prebuilt": "^0.0.10",
     "nwjs-builder-phoenix": "^1.15.0",
     "nwjs-types": "^1.0.0",
@@ -81,7 +81,7 @@
   },
   "chromium-args": "--enable-spell-checking --load-extension='./node_modules/nw-vue-devtools-prebuilt/extension'",
   "build": {
-    "nwVersion": "v0.42.0",
+    "nwVersion": "v0.42.3",
     "nwFlavor": "normal",
     "targets": [
       "zip",
