--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "eslint-config-tjw-vue": "^1.0.0",
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-vue": "^6.2.1",
-    "eslint-plugin-vue-a11y": "^0.0.31",
+    "eslint-plugin-vuejs-accessibility": "^0.3.1",
     "jest-serializer-vue-tjw": "^3.11.0",
     "nw": "0.47.0-sdk",
     "nw-vue-devtools-prebuilt": "^0.0.10",
