--- a/package.json
+++ b/package.json
@@ -44,22 +44,22 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.2",
-    "@vue/cli-plugin-e2e-nightwatch": "^4.2.2",
-    "@vue/cli-plugin-eslint": "^4.2.2",
-    "@vue/cli-plugin-unit-jest": "^4.2.2",
-    "@vue/cli-service": "^4.2.2",
-    "@vue/test-utils": "1.0.0-beta.31",
-    "babel-eslint": "^10.0.3",
-    "concurrently": "^5.1.0",
-    "core-js": "^3.6.4",
-    "eslint": "^6.8.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-unit-jest": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "@vue/test-utils": "1.0.3",
+    "babel-eslint": "^10.1.0",
+    "concurrently": "^5.2.0",
+    "core-js": "^3.6.5",
+    "eslint": "^7.4.0",
     "eslint-config-tjw-base": "^1.0.0",
-    "eslint-config-tjw-vue": "^1.0.0",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-vue": "^6.2.1",
+    "eslint-config-tjw-vue": "^2.0.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-vuejs-accessibility": "^0.3.1",
-    "jest-serializer-vue-tjw": "^3.11.0",
+    "jest-serializer-vue-tjw": "^3.14.0",
     "nw": "0.47.0-sdk",
     "nw-vue-devtools-prebuilt": "^0.0.10",
     "nwjs-builder-phoenix": "^1.15.0",
@@ -67,7 +67,7 @@
     "rimraf": "^3.0.2",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
-    "wait-on": "^4.0.0"
+    "wait-on": "^5.1.0"
   },
   "chromium-args": "--enable-spell-checking --load-extension='./node_modules/nw-vue-devtools-prebuilt/extension'",
   "build": {
