--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "fix": "vue-cli-service lint --fix",
     "test": "npm run test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "jest --config jest.config.js --coverage --runInBand",
+    "test:unit": "jest --config jest.config.js --coverage",
     "validate": "npm run lint && npm run test:unit && npm run build:vue",
     "update:vue-devtools": "rimraf ./node_modules/nw-vue-devtools-prebuilt && npm install"
   },
