--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@vue/cli-plugin-eslint": "^4.4.6",
     "@vue/cli-plugin-unit-jest": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
-    "@vue/test-utils": "1.0.3",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "concurrently": "^5.2.0",
     "core-js": "^3.6.5",
