--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap-vue": "^2.15.0",
     "express": "^4.17.1",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.10.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
