--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "vue-router": "^3.2.0",
     "vue-select": "^3.10.7",
+    "vue2-datepicker": "^3.6.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
